package Getraenkeparadies;

public interface Schuetteln {

     default void geschuettelt(){
        System.out.println("geschüttelt! ");
    };

}
