package getrank;

public class Apfelsaft extends Saft{
    boolean klar;
    boolean trüb;
}
