package getrank;

public class Kiwisaft extends Saft{
}
