package getrank;

public abstract class Saft extends Getränk{
    boolean fruchtfleisch;
}
