package getrank;

public class Wodka extends Spirituose{
    String aromaName;
}
