@startuml

title __INTERFACEGETRÄNK's Class Diagram__\n

  namespace Getraenkeparadies {
    class Getraenkeparadies.Apfelsaft {
    }
  }
  

  namespace Getraenkeparadies {
    abstract class Getraenkeparadies.Getraenk {
    }
  }
  

  namespace Getraenkeparadies {
    class Getraenkeparadies.Kiwisaft {
    }
  }
  

  namespace Getraenkeparadies {
    abstract class Getraenkeparadies.Saft {
    }
  }
  

  namespace Getraenkeparadies {
    interface Getraenkeparadies.Schuetteln {
    }
  }
  

  namespace Getraenkeparadies {
    abstract class Getraenkeparadies.Spirituose {
    }
  }
  

  namespace Getraenkeparadies {
    class Getraenkeparadies.Tequilla {
    }
  }
  

  namespace Getraenkeparadies {
    class Getraenkeparadies.Wodka {
    }
  }
  

  Getraenkeparadies.Apfelsaft -up-|> Getraenkeparadies.Saft
  Getraenkeparadies.Kiwisaft -up-|> Getraenkeparadies.Saft
  Getraenkeparadies.Saft .up.|> Getraenkeparadies.Schuetteln
  Getraenkeparadies.Saft -up-|> Getraenkeparadies.Getraenk
  Getraenkeparadies.Spirituose -up-|> Getraenkeparadies.Getraenk
  Getraenkeparadies.Tequilla -up-|> Getraenkeparadies.Spirituose
  Getraenkeparadies.Wodka .up.|> Getraenkeparadies.Schuetteln
  Getraenkeparadies.Wodka -up-|> Getraenkeparadies.Spirituose


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
